# granked-data-pipeline

./: .gitignore  README.md  extract_comments.py  ingest_comments.py  ingest_links.py  pyproject.toml  triage_comments.py  utilities.py
database/: comment.py  database.py  link.py
granked_data_pipeline/: analysis_utilities.py  constants.py  extract_comments.py  ingest_comments.py  ingest_links.py  ingestion_utilities.py  llm_utilities.py  prompt_creator.py  prompt_utilities.py  triage_comments.py  utilities.py
prompts/: extract_comments.txt  triage_comments.txt
tests/: test_ingest_links.py  test_ingestion_utilities.py  test_utilities.py
